[package]
name = "rand_func"
version = "0.1.0"
authors = ["Reconcyl <22424430+Reconcyl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
png = "0.15.3"
rouille = "3.0.0"
rmp-serde = "0.14.3"
hex = "0.4.2"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]
